Fix UI jumpiness by always showing scroll bar

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,7 @@
 
 body {
   padding: 10px;
+  overflow-y: scroll;
 }
 
 ul.nav {
